# sqlalchemy-surrealdb

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  README.md  README.zh.md  _typos.toml  main.py  pyproject.toml
.changes/: basic-crud-support.md  config.toml  connect-params.md  fix-empty-res.md  limit-course.md  type.md  visit-compiler.md
.github/workflows/: lint.yaml  semifold-ci.yaml  semifold-status.yaml
examples/: models.py
examples/fastapi-example/: main.py  models.py  pyproject.toml
sqlalchemy_surrealdb/: __init__.py  base.py  surrealdb.py  types.py
src/sqlalchemy_surrealdb/: __init__.py  base.py  surrealdb.py  types.py
tests/: conftest.py  models.py  test_crud.py  test_reflection.py
