[project]
name = "sqlalchemy-surrealdb"
version = "0.1.0"
description = "SQLAlchemy Dialect for SurrealDB"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "surrealdb[pydantic]>=1.0.8",
]

[project.entry-points."sqlalchemy.dialects"]
surrealdb = "sqlalchemy_surrealdb.base:SurrealDBDialect"

[dependency-groups]
dev = [
  "sqlalchemy>=2.0.49",
]

[build-system]
requires = ["uv_build>=0.11.6,<0.12"]
build-backend = "uv_build"

[tool.uv.workspace]
members = [
    "examples/fastapi-example",
]
